# Secure-VPN

./: CMakeLists.txt  README.md  RUN_INSTRUCTIONS.txt  vcpkg.json
certs/: ca.crt  ca.key  ca.srl  client.crt  client.key  server.crt  server.key
config/: users.json
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md
include/vpn/: auth.h  crypto.h  tunnel.h  vpn_client.h  vpn_server.h
include/vpn/common/: Logger.h
include/vpn/core/: Auth.h  Crypto.h  Session.h
include/vpn/tunnel/: Tunnel.h
scripts/: build.ps1  generate_certs.ps1  quick_start.md  run_tests.ps1
src/: CMakeLists.txt  auth.cpp  crypto.cpp  main.cpp  tunnel.cpp  vpn_client.cpp  vpn_server.cpp
src/client/: main_client.cpp
src/server/: main_server.cpp
src/vpn/common/: Logger.cpp
src/vpn/core/: Auth.cpp  Crypto.cpp  Session.cpp
src/vpn/tunnel/: Tunnel.cpp
tests/: CMakeLists.txt  test_auth.cpp  test_crypto.cpp  test_integration.cpp  test_main.cpp  test_tunnel.cpp
